[metadata]
name = nephi
version = 1.0.0
author = Lin Tian
author_email = lintian@cs.unc.edu
description = Generalizable neural representation for deformation fields
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/uncbiag/nephi
project_urls =
    Bug Tracker = https://github.com/uncbiag/nephi
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.7

install_requires = 
    icon_registration>=1.1.5
    ninja
    scikit-image

[options.packages.find]
where = src